alpm-types/src/snapshots/env::installed_new_parse_error@case_3.snap
---
source: alpm-types/src/env.rs
---
error: invalid delimiter
 | 
 | packagename-30-0.1oops-any
 | ~~~~~~~~~~~~~~~~~~^ expected expected a `-` followed by an alpm-architecture
 | 
 = while parsing:
   installed package name: (packagename-30-0.1oo…)
   → invalid delimiter
   → expected expected a `-` followed by an alpm-architecture
